--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -15,16 +15,38 @@
 
 <body class="open-sans pa3">
 
-  <button class="open-sans bg-turqouise-primary b--turqouise-primary heritage-blue dib fw6 pa1 br1 bw1 lh-copy hover-bg-turquoise-dark pointer hover-b-turquoise-dark focus-b-heritage-yellow outline-0 content-box">
+  <button class="open-sans bg-turqouise-primary b--turqouise-primary heritage-blue dib fw6 ph4 pv3 br1 bw1 lh-copy hover-bg-turquoise-dark pointer hover-b-turquoise-dark focus-b-heritage-yellow outline-0 content-box">
     Primary button
-  </button>
+  </button> <input class="open-sans dib fw6 input-reset ba lh-copy pa3 br1 b--light-grey bw1 focus-b-heritage-yellow outline-0">
   <br>
   <br>
   <fieldset class="open-sans bn pa0 ma0">
-    <label class=" open-sans db fw7 lh-copy mb2" for="firstname">First name:</label>
+    <label class=" open-sans db fw7 lh-copy mb3" for="firstname">First name:</label>
     <div>
-      <input class="open-sans dib fw6 input-reset ba lh-copy pa2 br1 b--light-grey bw1 focus-b-heritage-yellow outline-0">
+      <input class="open-sans dib fw6 input-reset ba lh-copy ph4 pv3 br1 b--light-grey bw1 focus-b-heritage-yellow outline-0">
     </div>
+  </fieldset>
+  <br>
+  <br>
+  <fieldset class="open-sans bn pa0 ma0">
+    <legend class=" open-sans db fw7 lh-copy mb2">Did this help?</legend>
+    <!-- Fieldset item-->
+    <div class="db">
+      <!-- Radio -->
+      <div class="pointer dib ma0 ml1 ph4 pv3 ba bw1 b--light-grey bg-pale-grey br1 hover-b--grey ">
+        <input id="yes" name="feedback" type="radio" class="lh-copy border-box">
+        <label for="yes" class="ml1 lh-copy fw6">Yes</label>
+      </div>
+    </div>
+    <!-- Fieldset item-->
+    <div class="db mv2">
+      <!-- Radio -->
+      <div class="pointer dib ma0 ml1 ph4 pv3 ba bw1 b--light-grey bg-pale-grey br1 hover-b--grey ">
+        <input id="no" name="feedback" type="radio" class="lh-copy border-box">
+        <label for="no" class="ml1 lh-copy fw6">No</label>
+      </div>
+    </div><input class="open-sans dib fw6 input-reset ba lh-copy pa3 br1 b--light-grey bw1 focus-b-heritage-yellow outline-0">
+
   </fieldset>
 </body>
 
