--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -112,7 +112,7 @@
       <legend class="open-sans block bold line-height-2 mb-2">Right and/or left?</legend>
     
       <div class="block mb-2 mr-2">
-        <div class="open-sans relative inline-block  items-center text-black semi-bold line-height-3 pv-3 ph-3 pointer checkbox z-index-0">
+        <div class="relative pv-3 ph-3 open-sans inline-block semi-bold checkbox line-height-3 pointer">
           <input checked id="right" value="right" name="direction" type="checkbox" class="">
           <label for="right">Right</label>
         </div>
