--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -12,40 +12,40 @@
   <link rel="stylesheet" type="text/css" href="output.css" />
 </head>
 
-<body class="text-black p-3">
-  <button class="semi-bold bg-turqouise-primary border-turqouise-primary text-heritage-blue inline-block ph-4 pv-3 border-radius-2 border border-width-2 line-height-2 hover-bg-turquoise-dark pointer hover-border-turquoise-dark focus-border-heritage-yellow outline-none content-box">
+<body class="black p-3">
+  <button class="semi-bold bg-turqouise-primary b-turqouise-primary heritage-blue inline-block ph-4 pv-3 b-radius-2 ba b-width-2 lh-2 hover-bg-turquoise-dark pointer hover-b-turquoise-dark focus-b-heritage-yellow outline-none content-box">
     Primary button
   </button>
 
   <br />
   <br />
 
-  <div class="border-none p-0 m-0">
-    <label class="bold line-height-2 block mb-2" for="firstname">First name:</label>
+  <div class="b-none p-0 m-0">
+    <label class="bold lh-2 block mb-2" for="firstname">First name:</label>
     <div>
-      <input class="semi-bold line-height-2 inline-block input-reset border border-width-2 border-radius-2 border-light-grey ph-4 pv-3 focus-border-heritage-yellow outline-none" />
+      <input class="semi-bold lh-2 inline-block input-reset ba b-width-2 b-radius-2 b-light-grey ph-4 pv-3 focus-b-heritage-yellow outline-none" />
     </div>
   </div>
 
   <br />
   <br />
 
-  <fieldset class="border-none p-0 m-0">
-    <legend class="block bold line-height-2 mb-2">Did this help?</legend>
+  <fieldset class="b-none p-0 m-0">
+    <legend class="block bold lh-2 mb-2">Did this help?</legend>
     <!-- Fieldset item-->
     <div class="block">
       <!-- Radio -->
-      <div class="m-0 ml-1 ph-4 pv-3 bg-pale-grey relative z-index-100 inline-flex items-center bold text-black radio">
+      <div class="m-0 ml-1 ph-4 pv-3 bg-pale-grey relative z-index-100 inline-flex items-center bold black radio">
         <input value="yes" id="yes" name="feedback" type="radio" />
-        <label for="yes" class="ml-2 line-height-2 semi-bold pointer">Yes</label>
+        <label for="yes" class="ml-2 lh-2 semi-bold pointer">Yes</label>
       </div>
     </div>
     <!-- Fieldset item-->
     <div class="block mv-2">
       <!-- Radio -->
-      <div class="m-0 ml-1 ph-4 pv-3 bg-pale-grey relative z-index-100 inline-flex items-center bold text-black radio">
+      <div class="m-0 ml-1 ph-4 pv-3 bg-pale-grey relative z-index-100 inline-flex items-center bold black radio">
         <input value="no" id="no" name="feedback" type="radio" />
-        <label for="no" class="ml-2 line-height-2 semi-bold">No</label>
+        <label for="no" class="ml-2 lh-2 semi-bold">No</label>
       </div>
     </div>
   </fieldset>
@@ -54,13 +54,13 @@
   <a href="'#'">Link</a> <br />
   <br />
   <!--Well  -->
-  <div class="border border-width-1 border-radius-1 border-heritage-blue p-4 pb-5">
+  <div class="ba b-width-1 b-radius-1 b-heritage-blue p-4 pb-5">
     <h2 class="mt-0">Hello World!</h2>
     <p>
       Get six alpha pups in here for a focus group today shall be a cloudy day, thanks to blue sky
       thinking, we can now deploy our new ui to the cloud yet strategic fit.
     </p>
-    <button class="semi-bold bg-turqouise-primary border-turqouise-primary text-heritage-blue inline-block ph-4 pv-3 border-radius-1 border border-width-1 line-height-2 hover-bg-turquoise-dark pointer hover-border-turquoise-dark focus-border-heritage-yellow outline-none content-box">
+    <button class="semi-bold bg-turqouise-primary b-turqouise-primary heritage-blue inline-block ph-4 pv-3 b-radius-1 ba b-width-1 lh-2 hover-bg-turquoise-dark pointer hover-b-turquoise-dark focus-b-heritage-yellow outline-none content-box">
       Next
     </button>
   </div>
@@ -68,31 +68,31 @@
   <br />
   <br />
 
-  <fieldset class="mb-4 border-none">
-    <legend class="block bold line-height-2 mb-2">
+  <fieldset class="mb-4 b-none">
+    <legend class="block bold lh-2 mb-2">
       Enter your date of purchase
-      <span class="text-mid-grey block regular">For example: 30 4 2017</span>
+      <span class="mid-grey block regular">For example: 30 4 2017</span>
     </legend>
 
 
     <div class="inline-block mb-2 mr-2">
-      <label class="block bold line-height-2 mb-2" for="day">Day:</label>
+      <label class="block bold lh-2 mb-2" for="day">Day:</label>
       <div class="">
-        <input id="day" type="text" pattern="[0-9]{2}" maxlength="2" minlength="1" class="inline-block semi-bold line-height-2 ph-4 pv-3 border border-radius-2 border-width-2 border-light-grey char-width-2 outline-none focus-border-heritage-yellow " />
+        <input id="day" type="text" pattern="[0-9]{2}" maxlength="2" minlength="1" class="inline-block semi-bold lh-2 ph-4 pv-3 ba b-radius-2 b-width-2 b-light-grey char-width-2 outline-none focus-b-heritage-yellow " />
       </div>
     </div>
 
     <div class="inline-block mb-2 mr-2">
-      <label class="block bold line-height-2 mb-2" for="month">Month:</label>
+      <label class="block bold lh-2 mb-2" for="month">Month:</label>
       <div class="">
-        <input id="month" type="text" pattern="[0-9]{2}" maxlength="2" minlength="1" class="inline-block semi-bold line-height-2 ph-4 pv-3 border border-radius-2 border-width-2 border-light-grey char-width-2 outline-none focus-border-heritage-yellow " />
+        <input id="month" type="text" pattern="[0-9]{2}" maxlength="2" minlength="1" class="inline-block semi-bold lh-2 ph-4 pv-3 ba b-radius-2 b-width-2 b-light-grey char-width-2 outline-none focus-b-heritage-yellow " />
       </div>
     </div>
 
     <div class="inline-block mb-2 mr-2">
-      <label class="block bold line-height-2 mb-2" for="year">Year:</label>
+      <label class="block bold lh-2 mb-2" for="year">Year:</label>
       <div class="">
-        <input id="year" type="text" pattern="[0-9]{4}" maxlength="4" minlength="1" class="inline-block semi-bold line-height-2 ph-4 pv-3 border border-radius-2 border-width-2 border-light-grey char-width-4 outline-none focus-border-heritage-yellow " />
+        <input id="year" type="text" pattern="[0-9]{4}" maxlength="4" minlength="1" class="inline-block semi-bold lh-2 ph-4 pv-3 ba b-radius-2 b-width-2 b-light-grey char-width-4 outline-none focus-b-heritage-yellow " />
       </div>
     </div>
   </fieldset>
@@ -100,11 +100,11 @@
   <br>
   <br>
 
-  <fieldset class="border-none p-0 m-0">
+  <fieldset class="b-none p-0 m-0">
     <div>
-      <div class="m-0 ml-1 ph-4 pv-3 bg-pale-grey relative z-index-100 inline-flex items-center bold text-black checkbox">
+      <div class="m-0 ml-1 ph-4 pv-3 bg-pale-grey relative z-index-100 inline-flex items-center bold black checkbox">
         <input value="yes" id="yes-check" name="feedback" type="checkbox" />
-        <label for="yes-check" class="ml-2 line-height-2 semi-bold pointer">Yes</label>
+        <label for="yes-check" class="ml-2 lh-2 semi-bold pointer">Yes</label>
       </div>
     </div>
   </fieldset>
