refactor section nav

--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -108,6 +108,27 @@
       </div>
     </div>
   </fieldset>
+
+  <br>
+  <br>
+
+  <ul class="m-0 p-0 list-style-none">
+    <li class="mb-3">In this section</li>
+    <li class="mb-7">
+      <span class="h2">Something's wrong with a purchase</span>
+      <ul class="list-style-none">
+        <li class=""><a href="#">Link to current page visited</a></li>
+        <li class=""><a href="#">A link to a page</a></li>
+        <li class=""><a href="#">A much much much longer link to another page</a></li>
+        <li class=""><a href="#">A link to a page</a></li>
+        <li class=""><a href="#">A link to a page</a></li>
+        <li class=""><a href="#">A link to a page</a></li>
+        <li class=""><a href="#">A link to a page</a></li>
+      </ul>
+    </li>
+  </ul>
+
+
 </body>
 
 </html>
