slimmed down width classes

--- a/component-testing/index.html
+++ b/component-testing/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Button test</title>
+    <title>Grid test</title>
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="SitePoint" />
 
@@ -19,50 +19,95 @@
     <!--  -->
     <h3>Full width</h3>
     <div class="flex mb-4">
-      <div class="w-100 p-2">
-        <div class="bg-red-light w-100 mh-1 text-center bold p-5">Full width</div>
+      <div class="w-full p-2">
+        <div class="bg-red-light w-full mh-1 text-center bold p-5">
+          Full width
+        </div>
       </div>
     </div>
 
     <!--  -->
-    <h3>Half width</h3>
-    <div class="flex mb-4">
-      <div class="w-50 p-2">
-        <div class="bg-turqouise-light w-100 mh-1 text-center bold p-5">Half width</div>
+    <h3>Half width on desktop/full width on mobile</h3>
+    <div class="flex flex-wrap mb-4">
+      <div class="p-2 w-full w-half-ns">
+        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
+          Half width
+        </div>
       </div>
-      <div class="w-50 p-2">
-        <div class="bg-turqouise-light w-100 mh-1 text-center bold p-5">Half width</div>
-      </div>
-    </div>
-
-    <!--  -->
-    <h3>One third width</h3>
-    <div class="flex mb-4">
-      <div class="flex w-third p-2">
-        <div class="bg-blue-light w-100 mh-1 text-center bold p-5">One third width</div>
-      </div>
-      <div class="flex w-third p-2">
-        <div class="bg-blue-light w-100 mh-1 text-center bold p-5">One third width</div>
-      </div>
-      <div class="flex w-third p-2">
-        <div class="bg-blue-light w-100 mh-1 text-center bold p-5">One third width</div>
+      <div class="p-2 w-full w-half-ns">
+        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
+          Half width
+        </div>
       </div>
     </div>
 
     <!--  -->
-    <h3>One quarter width</h3>
-    <div class="flex mb-4">
-      <div class=" w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+    <h3>One third width on desktop/full width on mobile</h3>
+    <div class="flex flex-wrap mb-4">
+      <div class="flex w-full w-third-ns p-2">
+        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+          One third width
+        </div>
       </div>
-      <div class=" w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+      <div class="flex w-full w-third-ns p-2">
+        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+          One third width
+        </div>
       </div>
-      <div class=" w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+      <div class="flex w-full w-third-ns p-2">
+        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+          One third width
+        </div>
       </div>
-      <div class=" w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+    </div>
+
+    <!--  -->
+    <h3>One quarter width desktop/full width mobile</h3>
+    <div class="flex flex-wrap mb-4">
+      <div class="w-full w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
+      </div>
+      <div class="w-full w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
+      </div>
+      <div class="w-full w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
+      </div>
+      <div class="w-full w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
+      </div>
+    </div>
+
+    <!--  -->
+    <h3>One quarter width desktop/half width mobile</h3>
+    <div class="flex flex-wrap mb-4">
+      <div class="w-half w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
+      </div>
+      <div class="w-half w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
+      </div>
+      <div class="w-half w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
+      </div>
+      <div class="w-half w-quarter-ns p-2">
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
       </div>
     </div>
 
@@ -72,48 +117,68 @@
     <!--  -->
     <h3>Full width</h3>
     <div class="clear-fix mb-4">
-      <div class="float-left w-100 p-2">
-        <div class="bg-red-light w-100 mh-1 text-center bold p-5">Full width</div>
+      <div class="float-left w-full p-2">
+        <div class="bg-red-light w-full mh-1 text-center bold p-5">
+          Full width
+        </div>
       </div>
     </div>
 
     <!--  -->
     <h3>Half width</h3>
     <div class="clear-fix mb-4">
-      <div class="float-left w-50 p-2">
-        <div class="bg-turqouise-light w-100 mh-1 text-center bold p-5">Half width</div>
+      <div class="float-left w-half p-2">
+        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
+          Half width
+        </div>
       </div>
-      <div class="float-left w-50 p-2">
-        <div class="bg-turqouise-light w-100 mh-1 text-center bold p-5">Half width</div>
+      <div class="float-left w-half p-2">
+        <div class="bg-turqouise-light w-full mh-1 text-center bold p-5">
+          Half width
+        </div>
       </div>
     </div>
     <!--  -->
     <h3>One third width</h3>
     <div class="clear-fix mb-4">
       <div class="float-left w-third p-2">
-        <div class="bg-blue-light w-100 mh-1 text-center bold p-5">One third width</div>
+        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+          One third width
+        </div>
       </div>
       <div class="float-left w-third p-2">
-        <div class="bg-blue-light w-100 mh-1 text-center bold p-5">One third width</div>
+        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+          One third width
+        </div>
       </div>
       <div class="float-left w-third p-2">
-        <div class="bg-blue-light w-100 mh-1 text-center bold p-5">One third width</div>
+        <div class="bg-blue-light w-full mh-1 text-center bold p-5">
+          One third width
+        </div>
       </div>
     </div>
     <!--  -->
     <h3>One quarter width</h3>
     <div class="clear-fix mb-4">
       <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
       </div>
       <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
       </div>
       <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
       </div>
       <div class="float-left w-quarter p-2">
-        <div class="bg-heritage-yellow-40 w-100 mh-1 text-center bold p-5">One quarter width</div>
+        <div class="bg-heritage-yellow-40 w-full mh-1 text-center bold p-5">
+          One quarter width
+        </div>
       </div>
     </div>
   </body>
